# ball-setup

./: .gitignore  README.md  bootstrap.sh  pyproject.toml  setup.sh
custom-skills/linear-manager/: SKILL.md
custom-skills/linear-manager/examples/: standup.md  ticket-execution-research.md  ticket-execution-writing.md
docs/superpowers/plans/: 2026-04-29-python-rewrite.md
docs/superpowers/specs/: 2026-04-29-python-rewrite-design.md
src/ball_setup/: cli.py  detector.py  installer.py  registry.py  shell.py  tui.py
tests/: test_cli.py  test_detector.py  test_installer.py  test_registry.py  test_shell.py
